Synthetic wheel end event shouldn't have any wheel ticks.

The synthetic wheel end event is not sent to JS and it cannot get
preventDefaulted based on its modifiers. This can cause a regression
when ctrl-zoom is prevented by checking the event modifiers in
mouseWheelListeners. This cl fixes the issue by explicitly assigning
zero wheel ticks to the synthetic wheel end event instead of getting the
ticks of the last real wheel event.

TimerBasedWheelEventPhaseInfo

Bug: 770678
Test: RenderWidgetHostViewAuraWheelScrollLatchingEnabledTest.
Change-Id: I8b294f6e35516ba6e5a30cac4d0f06fe5dba3311
Reviewed-on: https://chromium-review.googlesource.com/701734
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507045}
Former-commit-id: 5df9af55ac33d5b1bd4e0b14e01b7938fab94b16